syntax = "proto3";
option csharp_namespace = "Claim.Services";
import "google/protobuf/timestamp.proto";
package grpcClaimService;

//Services
service grpcClaimService {    
    //ClaimRequest
    rpc SaveClaimRequest (SaveClaimRequest_Request) returns (String_Response);
    rpc GetClaimRequest (String_Request) returns (GetClaimRequest_Response);
    rpc GetClaimRequestList (GetClaimRequestList_Request) returns (GetClaimRequestList_Response);
    rpc CancelClaimRequest (String_Request) returns (Empty_Response);
    rpc GetCustomerInfo (String_Request) returns (GetCustomerInfo_Response);


    //Insure
    rpc GetInsureContract (GetInsureContract_Request) returns (GetInsureContract_Response);

    //RepairEstimation
    rpc SaveRepairEstimation (SaveRepairEstimation_Request) returns (Empty_Response);
    rpc GetRepairEstimation (String_Request) returns (GetRepairEstimation_Response);
    rpc GetRefEstimationList (Empty_Request) returns (GetRefEstimationList_Response);

    //AttachFiles
    rpc SaveAttachFiles (SaveAttachFiles_Request) returns (Empty_Response);
    rpc GetAttachFiles (String_Request) returns (GetAttachFiles_Response);
    rpc GetAttachFileCount (GetAttachFileCount_Request) returns (Int_Response);

    //RepairerMaster
    rpc SaveRepairerMaster (SaveRepairerMaster_Request) returns (String_Response);
    rpc GetRepairerMaster (Empty_Request) returns (GetRepairerMaster_Response);

    //BranchMaster
    rpc SaveBranchMaster (SaveBranchMaster_Request) returns (String_Response);
    rpc GetBranchMaster (Empty_Request) returns (GetBranchMaster_Response);
   
}

//======================================================
// Common Messages
//======================================================
message UserCredential {
    string Username = 1;
    string RoleID = 2;
    string AccessToken = 3;
    string ApiKey = 4;
}
message Empty_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
}
message Empty_Request {
    UserCredential Credential = 1;
}
//
message String_Request
{
    UserCredential Credential = 1;
    //
     string StringValue = 2;
}
message String_Response
{
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
     string StringValue = 3;
}
message Int_Response
{
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
     int32 IntValue = 3;
}

//
//======================================================
// Messages
//======================================================
message GetCustomerInfo_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    string CusEmail = 3;
    string CusFullname = 4;
    string CusCardID = 5;
    string PickupAddress = 6;
}
message GetInsureContract_Request {
    UserCredential Credential = 1;
    //
    string InsurContractNo = 2;
    string InsurCompanyID = 3;
}
message GetInsureContract_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    google.protobuf.Timestamp InsurStartDate = 3;
    google.protobuf.Timestamp InsurEndDate = 4;
    double InsurAmount = 5;
}


message GetRefEstimationList_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    repeated grpcRefEstimationModel Records = 3;
}
message grpcRefEstimationModel {
    string ClaimNo = 1;
    string ReqPersonName = 2;
    string BranchName = 3;
    string RepairerName = 4;
    string TemplateName = 5;
}

message SaveBranchMaster_Request {
    UserCredential Credential = 1;
    //
    grpcBranchMasterModel Record = 2;
}
message grpcBranchMasterModel {
    string ID = 1;
    string BranchID = 2;
    string BranchName = 3;
    string Discriptions = 5;
    int32 DspOrder = 6;
    bool Enabled = 7;
    google.protobuf.Timestamp ModifiedOn = 8;
    int32 UpdMode = 9;
}
message GetBranchMaster_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    repeated grpcBranchMasterModel Records = 3;
}
message UpdateTotalClaimRequest_Request {
    UserCredential Credential = 1;
    //
    string ClaimNo = 2;
    double EstRepairPrice = 3;
    double DealRepairPrice = 4;
    double AprRepairPrice = 5;
    double EstVAT = 80;
    double DealVAT = 81;
    double AprVAT = 82;
}
message UpdateStatusClaimRequest_Request {
    UserCredential Credential = 1;
    //
    string ClaimNo = 2;
    bool IsUpdateAcceptStatus = 3;
    bool AcceptStatus = 4;
    bool IsUpdateCancelStatus = 5;
    bool CancelStatus = 6;
}


message SaveRepairerMaster_Request {
    UserCredential Credential = 1;
    //
    grpcRepairerMasterModel Record = 2;
}
message GetRepairerMaster_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    repeated grpcRepairerMasterModel Records = 3;
}
message grpcRepairerMasterModel {
    string ID = 1;
    string RepairerID = 2;
    string RepairerName = 3;
    string PhoneNo = 4;
    string Email = 5;
    string Address = 6;
    string Notes = 7;
    string EstPersonID = 8;
    string EstPersonName = 9;
    int32 Status = 10;
    google.protobuf.Timestamp ModifiedOn = 11;
    int32 UpdMode = 12;
}

message GetAttachFileCount_Request {
    UserCredential Credential = 1;
    //
    string VoucherNo = 2;
    int32 DocumentLevel = 3;
}

message SaveClaimRequest_Request {
    UserCredential Credential = 1;
    //
    bool IsApproval = 2;
    grpcClaimRequestModel ClaimRequest = 3;
    
}
message GetClaimRequest_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    grpcClaimRequestModel ClaimRequest = 3;
}
message grpcClaimRequestModel {
    string ID = 1;
    string ClaimNo = 2;
    google.protobuf.Timestamp ClaimDate = 3;
    string ClaimAccountID = 4;
    string ClaimAccountName = 5;
    string BrancheID = 6;
    string BrancheName = 7;
    //Customer & claim
    string CusFullname = 8;
    string CusPhone = 9;
    string CusEmail = 10;
    string CusCardID = 11;
    string DeviceIMEI = 12;
    string DeviceModel = 13;
    string TPAProductID = 14;
    string TPAProductName = 15;
    google.protobuf.Timestamp IncidentDate = 16;
    google.protobuf.Timestamp NotificationDate = 17;
    string DamageCause = 18;
    string DamageType = 19;
    string NotificationChannelID = 20;
    string NotificationChannelName = 98;
    int32 Priority = 21;
    //Insur contraction
    string InsurContractNo = 22;
    google.protobuf.Timestamp InsurStartDate = 23;
    google.protobuf.Timestamp InsurEndDate = 24;
    string InsurCompanyID = 25;
    string InsurCompanyName = 26;
    double InsurAmount = 27;
    string AcceptNotes = 28;
    bool AcceptStatus = 29;
    //Pickup
    google.protobuf.Timestamp PickupReqDate = 30;
    google.protobuf.Timestamp PickupDoneDate1 = 31;
    google.protobuf.Timestamp PickupDoneDate2 = 32;
    string PickupCompanyID = 33;
    string PickupCompanyName = 34;
    string PickupAccountID = 35;
    string PickupAccountName = 36;
    string PickupNotes = 37;
    string PickupAddress = 38;
    bool PickupStatus1 = 39;
    bool PickupStatus2 = 40;
    //Check
    google.protobuf.Timestamp CheckReqDate = 41;
    google.protobuf.Timestamp CheckDoneDate = 42;
    string PicAccountID = 43;
    string PicPhone = 44;
    string PicAccountName = 45;
    string CheckNotes = 46;
    bool CheckStatus = 47;
    //Repair
    google.protobuf.Timestamp RepairReqDate = 48;
    google.protobuf.Timestamp RepairDoneDate = 49;
    string RepairCompanyID = 50;
    string RepairCompanyName = 51;
    string RepairAccountID = 52;
    string RepairAccountName = 53;
    string NewDeviceIMEI = 54;
    string NewDeviceModel = 55;
    string RepairNotes = 56;
    bool RepairStatus = 57;
    //Estimations
    repeated grpcEstimationModel Estimations = 58;
    bool EstimationStatus = 59;
    //Approve
    google.protobuf.Timestamp ApproveReqDate = 60;
    google.protobuf.Timestamp ApproveDoneDate = 61;
    string ApproveAccountID = 62;
    string ApproveAccountName = 63;
    string ApproveNotes = 64;
    bool ApproveStatus = 65;
    //Return
    google.protobuf.Timestamp ReturnReqDate = 66;
    google.protobuf.Timestamp ReturnDoneDate = 67;
    string ReturnCompanyID = 68;
    string ReturnCompanyName = 69;
    string ReturnAccountID = 70;
    string ReturnAccountName = 71;
    string ReturnAddress = 72;
    string ReturnNotes = 73;
    bool ReturnStatus1 = 74;
    bool ReturnStatus2 = 75;
    //sumary
    double ClaimAmount = 76;
    double ApproveAmount = 77;
    double DeductibleAmount = 78;
    double IndemnityAmount = 79;
    double RemainingAmount = 80;
    //Images
    repeated grpcImageModel Images = 81;
    //Update History
    repeated grpcUpdateHistoryModel UpdateHistorys = 82;
    //CancelStatus
    bool CancelStatus = 83;
    //
    int32 UpdMode = 99;
    google.protobuf.Timestamp ModifiedOn = 100;
}
message grpcEstimationModel {
    int32 LineNo = 1;
    google.protobuf.Timestamp IssueDate = 2;
    string ItemCode = 3;
    string ItemName = 4;
    bool IsReplace = 5;
    double Quantity = 6;
    double UnitPrice = 7;
    double Amount = 8;
    double ApproveAmount = 9;
    string Notes = 10;
}
message grpcImageModel {
    google.protobuf.Timestamp IssueDate = 1;
    int32 SecureLevel = 2;
    string ImageID = 3;
    string Title = 4;
    string UploadAccountID = 5;
}
message grpcUpdateHistoryModel {
    google.protobuf.Timestamp ChangedDate = 1;
    string WorkStep = 2;
    string ChangedStatus = 3;
    string ChangedNotes = 4;
}

message SaveRepairEstimation_Request {
    UserCredential Credential = 1;
    //
    grpcRepairEstimationModel RepairEstimation = 2;
}
message GetRepairEstimation_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    grpcRepairEstimationModel RepairEstimation = 3;
}
message grpcRepairEstimationModel {
    string ID = 1;
    string ClaimNo = 2;
    string EstNo = 3;
    google.protobuf.Timestamp EstDateTime = 4;
    string EstContent = 5;
    int32 ApproveLevel = 6;
    repeated grpcEstGroupItemModel EstGroupItems = 7;
    bool IsTemplate = 8;
    //
    string ReqPersonName = 9;
    string BranchName = 10;
    string RepairerName =11;
    string TemplateName = 12;
    //
    google.protobuf.Timestamp ModifiedOn = 13;
    int32 UpdMode = 14;
}
message grpcEstGroupItemModel {
    int32 LineNo = 1;
    google.protobuf.Timestamp IssueDateTime = 2;
    string EstItem = 3;
    double RepairPrice = 4;
    double DealRepairPrice = 5;
    double AprRepairPrice = 6;
    double EstVAT = 7;
    double DealVAT = 8;
    double AprVAT = 9;
    string RecNo = 10;
    repeated grpcEstDetailItemModel EstDetailItems = 11;
}
message grpcEstDetailItemModel {
    int32 LineNo = 1;
    google.protobuf.Timestamp IssueDateTime = 2;
    string EstItem = 3;
    double Quantity = 4;
    double UnitPrice = 5;
    double Amount = 6;
    double DealAmount = 7;
    double AprAmount = 8;
    double VatRate = 9;
    double EstVAT = 10;
    double DealVAT = 11;
    double AprVAT =12;
    string Notes = 13;
    string RecNo = 14;
}
message SaveAttachFiles_Request {
    UserCredential Credential = 1;
    //
    repeated grpcAttachFileModel AttachFiles = 2;
}
message grpcAttachFileModel {
    string ID = 1;
    string VoucherNo = 2;
    google.protobuf.Timestamp IssueDateTime = 3;
    string CategoryID = 4;
    string CategoryName = 5;
    string FileName = 6;
    string Notes = 7;
    string ResourceID = 8;
    int32 DocumentLevel = 9;
    string DocumentLevelName = 10;
    string DataOwnerID = 11;
    //
    google.protobuf.Timestamp ModifiedOn = 12;
    int32 UpdMode = 13;
}
message GetAttachFiles_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    repeated grpcAttachFileModel AttachFiles = 3;
}
message GetClaimRequestList_Request {
    UserCredential Credential = 1;
    //
    string CusPhone = 2;
    string DeviceIMEI = 3;
    string CusFullname = 4;
    string BrancheID = 5;
    string InsurCompanyID = 6;
    int32 Status = 7;
    bool StatusCheck = 8;
    google.protobuf.Timestamp StartDate = 9;
    google.protobuf.Timestamp EndDate = 10;
}
message GetClaimRequestList_Response {
    int32 ReturnCode = 1;
    string MsgCode = 2;
    //
    repeated grpcClaimRequestModel ClaimRequests = 3;
}


